--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Karl Heitmann <khf1988@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
+  }
 }
